--- a/app/globals.css
+++ b/app/globals.css
@@ -139,10 +139,15 @@ ul {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding: 20px 0 100px 0;
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
+  content: '';
+  width: 100%;
+  height: 50px;
+  background-color: aqua;
   left: 0;
   bottom: 0;
   z-index: 1;
@@ -151,4 +156,26 @@ ul {
 .container {
   width: 70%;
   margin: 0 auto;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+}
+
+form input {
+  width: 200px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+form button {
+  border: none;
+  width: 100px;
+  height: 50px;
+  background-color: aqua;
+  cursor: pointer;
 }
